Added several additional features, and fixed bugs.

--- a/static/contact.html
+++ b/static/contact.html
@@ -82,9 +82,21 @@
 </ol>
 <p>In addition, please note that all DMCA take downs are publically logged and availble to users of the site for transparency purposes. If you are a user and would like to view previous DMCA takedowns click <a href="/logs.js">here</a>.</p>
 </div>
+
+<div class = "linkBoxes">
+<ul>
+<li class = "first"><a href="/">Home</a></li>
+<li><a href="/.static/faq.html">FAQ</a></li>
+<li><a href="/.static/globalRules.html">Rules</a></li>
+<li><a href="/.static/contact.html">Contact</a></li>
+<li><a href="/logs.js">Logs</a></li>
+<li><a href="/graphs.js">Daily Graphs</a></li>
+<li><a href="/account.js">Account</a></li>
+<ul>
+</div>
+
 </center>
 
-<hr>
 <footer>
 <div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
 <br />
