--- a/static/faq.html
+++ b/static/faq.html
@@ -74,10 +74,11 @@
     <li><a href = "#faq1">Who owns 117chan?</a></li>
     <li><a href = "#faq3">How does 117chan work?</a></li>
     <li><a href = "#faq4">What are global rules?</a></li>
-    <li><a href = "#faq5">How do I format text?</a></li>
-    <li><a href = "#faq6">What is Sage?</a></li>
-    <li><a href = "#faq7">What is a tripcode?</a></li>
+    <li><a href = "#formatting">How do I format text?</a></li>
+    <li><a href = "#faq5">What is sage?</a></li>
+    <li><a href = "#faq6">What is a tripcode?</a></li>
     <li><a href = "#faq7">What is a role signature?</a></li>
+    <li><a href = "#appeal">Can I appeal a ban?</a></li>
     <li><a href = "#faq8">How can I become a volunteer?</a></li>
     <li><a href = "#faq9">How do I leave feedback or request features?</a></li>
     <li><a href = "#faq10">How do I get in contact with an administrator?</a></li>
@@ -106,7 +107,7 @@
 <p>Click <a href="/.static/globalRules.html">here</a> to be redirected to the list of global rules.</p>
 <p><b>Please note that ban durations will vary based on the severity and context of the rule being broken.</b></p>
 
-<a id="faq5"></a><h2 class = "table_h2">How do I format text?</h2>
+<a id="formatting"></a><h2 class = "table_h2">How do I format text?</h2>
       <h2 class = "inner_h2">Tags</h2>
 <ol style="list-style-type:none;">
         <li>[spoiler]the game[/spoiler] -> <span class="spoiler">the game</span></li>
@@ -184,10 +185,10 @@
 
 
 
-<a id="faq6"></a><h2 class = "table_h2">What is <i>Sage</i>?</h2>
+<a id="faq5"></a><h2 class = "table_h2">What is <i>Sage</i>?</h2>
 <p>Typing "sage" into the email field when replying to a post will generate a reply without bumping the thread.</p>
 
-<a id="faq7"></a><h2 class = "table_h2">What is a tripcode?</h2>
+<a id="faq6"></a><h2 class = "table_h2">What is a tripcode?</h2>
 <p>By default posts are made anonymously on 117chan. However you may use the "name" field to establish an identity.</p>
 
 <ol style="I">
@@ -201,6 +202,11 @@
 
 You can also enable an always use role signature rule in your account settings.</p>
 
+
+<a id="appeal"></a><h2 class = "table_h2">Can I appeal a ban?</h2>
+<p>Yes, get in contact with a moderator on either IRC, Mumble, or email ban@117chan.org   [ban (at) 117chan.org].</p>
+
+
 <a id="faq9"></a><h2 class = "table_h2">How can I become a volunteer?</h2>
 <p>Typically if volunteers are needed a global announcement will be sent out. The necessity for volunteers may vary from being a board janitor, a 117chan developer, IRC/Mumble moderator etc.</p>
 
@@ -211,9 +217,22 @@ You can also enable an always use role signature rule in your account settings.<
 <p>Please send an email to admin@117chan.org   [admin (at) 117chan.org].</p>
 
 </div>
+
+
+<div class = "linkBoxes">
+<ul>
+<li class = "first"><a href="/">Home</a></li>
+<li><a href="/.static/faq.html">FAQ</a></li>
+<li><a href="/.static/globalRules.html">Rules</a></li>
+<li><a href="/.static/contact.html">Contact</a></li>
+<li><a href="/logs.js">Logs</a></li>
+<li><a href="/graphs.js">Daily Graphs</a></li>
+<li><a href="/account.js">Account</a></li>
+<ul>
+</div>
+
 </center>
 
-<hr>
 <footer>
 <div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
 <br />
