--- a/static/globalRules.html
+++ b/static/globalRules.html
@@ -66,12 +66,32 @@
 <div class = "tableOutside">
 <h2 class = "table_h2">Global Rules</h2>
       <ol id="golbalRulesUl" style="1">
-        <li>Insert rules here.</li>
+        <li>You must be 18 years or older to use 117chan.</li>
+        <li>Do not post anything that violates US law.</li>
+        <li>Do not post, link to, request, or discuss pornographic content involving underage children. <b>(This will result in a permanent ban, which cannot be appealed).</b></li>
+        <li>Do not flood or spam.</li>
+        <li>Do not post furry, pony/brony, or loli/shota images/content.</li>
+        <li>Do not evade bans <b>(this may result in a permanent ban)</b>, instead <a href="/.static/faq.html#appeal">appeal</a> your ban.</li>
+        <li>Advertising is not welcome--this includes referral linking, "offers", soliciting, begging, etc.</li>
+        <li>Do not post adult content on safe for work (sfw) boards.</li>
+        <li>Do not impersonate 117chan staff members.</li>
       </ol>
 </div>
+
+<div class = "linkBoxes">
+<ul>
+<li class = "first"><a href="/">Home</a></li>
+<li><a href="/.static/faq.html">FAQ</a></li>
+<li><a href="/.static/globalRules.html">Rules</a></li>
+<li><a href="/.static/contact.html">Contact</a></li>
+<li><a href="/logs.js">Logs</a></li>
+<li><a href="/graphs.js">Daily Graphs</a></li>
+<li><a href="/account.js">Account</a></li>
+<ul>
+</div>
+
 </center>
 
-<hr>
 <footer>
 <div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
 <br />
