Added a global announcement feature to announce to all pages with the specified div tag. Still needs polish, but works for now.

--- a/static/contact.html
+++ b/static/contact.html
@@ -59,9 +59,11 @@
 <center>
 <h1>Contact</h1>
 <p class="nonBoardSubText">General Questions, Suggestions, and DMCA Takedowns</p>
-</center>
 
-<center>
+<div class = "gAnnounce">
+<p id="globalAnnouncement"></p>
+</div>
+
 <div class = "tableOutside">
 <h2 class = "table_h2">General Questions and Suggestions</h2>
 <p>Email: admin@117chan.org   [admin (at) 117.org]</p>
@@ -110,5 +112,6 @@ Copyright © 2018 117chan Development Team.
 <script src="/.static/js/draggable.js"></script>
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
+<script src="/.static/js/globalAnnouncement.js"></script>
 
 </html>
