--- a/static/faq.html
+++ b/static/faq.html
@@ -64,9 +64,11 @@
 <center>
 <h1>FAQ</h1>
 <p class="nonBoardSubText">Frequently Asked Questions</p>
-</center>
 
-<center>
+<div class = "gAnnounce">
+<p id="globalAnnouncement"></p>
+</div>
+
 <div class = "tableOutside">
 <h2 class = "table_h2">Questions</h2>
   <ol>
@@ -246,5 +248,6 @@ Copyright © 2018 117chan Development Team.
 <script src="/.static/js/draggable.js"></script>
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
+<script src="/.static/js/globalAnnouncement.js"></script>
 
 </html>
