--- a/static/globalRules.html
+++ b/static/globalRules.html
@@ -58,11 +58,15 @@
   </header>
 
 <center>
+
+
 <h1>Global Rules</h1>
 <p class="nonBoardSubText">Follow these rules or get banned</p>
-</center>
 
-<center>
+<div class = "gAnnounce">
+<p id="globalAnnouncement"></p>
+</div>
+
 <div class = "tableOutside">
 <h2 class = "table_h2">Global Rules</h2>
       <ol id="golbalRulesUl" style="1">
@@ -105,6 +109,6 @@ Copyright © 2018 117chan Development Team.
 <script src="/.static/js/draggable.js"></script>
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
-
+<script src="/.static/js/globalAnnouncement.js"></script>
 </html>
 
