Added several features, especially those that would make the site much easier to maintain over time.

--- a/static/globalRules.html
+++ b/static/globalRules.html
@@ -82,25 +82,11 @@
       </ol>
 </div>
 
-<div class = "linkBoxes">
-<ul>
-<li class = "first"><a href="/">Home</a></li>
-<li><a href="/.static/faq.html">FAQ</a></li>
-<li><a href="/.static/globalRules.html">Rules</a></li>
-<li><a href="/.static/contact.html">Contact</a></li>
-<li><a href="/logs.js">Logs</a></li>
-<li><a href="/graphs.js">Daily Graphs</a></li>
-<li><a href="/account.js">Account</a></li>
-<ul>
-</div>
+<div id="buttonType"></div>
 
 </center>
 
-<footer>
-<div class = "footerBar"><a href="/.static/faq.html#faq1">About</a> • <a href="/meta/res/1.html#">Feedback</a> • <a href="/.static/contact.html#legal">Legal</a> • <a href="/.static/contact.html">Contact</a></div>
-<br />
-Copyright © 2018 117chan Development Team.
-</footer>
+<div class="footerBar" id="footerBarType" value="A"></div>
 </body>
 
 <script src="/.static/js/settings.js"></script>
@@ -110,5 +96,7 @@ Copyright © 2018 117chan Development Team.
 <script src="/.static/js/watcher.js"></script>
 <script src="/.static/js/favouriteBoards.js"></script>
 <script src="/.static/js/globalAnnouncement.js"></script>
+<script src="/.static/js/buttonInject.js"></script>
+<script src="/.static/js/footerInject.js"></script>
 </html>
 
