--- a/static/moderation.html
+++ b/static/moderation.html
@@ -265,5 +265,18 @@
 
   </div>
 
+<div class="footerBar" id="footerBarType" value="A"></div>
+
 </body>
+
+<script src="/.static/js/settings.js"></script>
+<script src="/.static/js/api.js"></script>
+<script src="/.static/js/themes.js"></script>
+<script src="/.static/js/draggable.js"></script>
+<script src="/.static/js/watcher.js"></script>
+<script src="/.static/js/favouriteBoards.js"></script>
+<script src="/.static/js/randomQuote.js"></script>
+<script src="/.static/js/globalAnnouncement.js"></script>
+<script src="/.static/js/footerInject.js"></script>
+
 </html>
