--- a/static/janitor.html
+++ b/static/janitor.html
@@ -57,32 +57,53 @@
   </header>
 
 <center>
-<h1>Contact</h1>
-<p class="nonBoardSubText">General Questions, Suggestions, and DMCA Takedowns</p>
+<h1>Janitor Application</h1>
+<p class="nonBoardSubText"><b>JANITOR APPLICATIONS ARE CURRENTLY: <font color = "green">OPEN</font></b></p>
 
 <div class = "gAnnounce">
 <p id="globalAnnouncement"></p>
 </div>
 
 <div class = "tableOutside">
-<h2 class = "table_h2">General Questions and Suggestions</h2>
-<p>Email: admin@117chan.org   [admin (at) 117.org]</p>
-<p>If you want an answer from a non-administrator you can also, post a reply to the <a href="/meta/">General Improvement Thread</a> on /meta/ or start a new thread on /meta/.</p>
-</div>
+<h2 class = "table_h2">Apply</h2>
+<p><b>Janitors are currently needed on</b>: /a/, /b/, /g/, /pol/, /v/, /v9k/.</p>
+<p>Thanks for expressing interest in becoming a volunteer at 117chan!</p>
+<p>As a board janitor you will be in charge of maintaining order, and enforcing both global and board rules.</p>
 
-<div class = "tableOutside">
-<a id="legal"></a><h2 class = "table_h2">DMCA Takedowns</h2>
-<p>If you are a copyright holder of an image/video/file and would like it removed send a <b>PROPERLY-FORMATED</b> DMCA Takedown Notice to legal@117chan.org   [legal (at) 117chan.org].</p>
-<p>For legal reasons, DMCA Takedown Notices <b>MUST</b> include the following:</p>
-<ol style="1">
-<li>Name or Company Name</li>
-<li>Address</li>
-<li>Daytime telephone</li>
-<li>Email address</li>
-<li>Name or title of Work(s) to be removed</li>
-<li>URLs of offending files or posts</li>
+<font color = "green"><b><p>Janitor's CAN...</p></b></font>
+<ol>
+<li>Removing threads, replies and images that pertain to their <i>assigned</i> board(s).</li>
+<li>Submit ban/warning <i>requests</i> to moderators.</li>
+<li>Access the report log.</li>
 </ol>
-<p>In addition, please note that all DMCA take downs are publically logged and availble to users of the site for transparency purposes. If you are a user and would like to view previous DMCA takedowns click <a href="/logs.js">here</a>.</p>
+
+<font color = "red"><b><p>Janitor's CANNOT...</p></b></font>
+<ol>
+<li>Ban users.</li>
+<li>Use role identifiers, or set rules.</li>
+</ol>
+
+<b><p>Requirements</p></b>
+<ol>
+<li>Be a responsible individual.</li>
+<li>Be able to use IRC/Mumble, and be regularily contactable.</li>
+<li>Have a deep understand of established rules.</li>
+<li>Be accountable, all of your actions are logged.</li>
+<li>Remain annonymous, do not disclose your role.</li>
+</ol>
+
+<p><b>To apply, please send an email to admin@117chan.org   [admin (at) 117chan.org]. Please make the subject of the email "Janitor Application." In the body of the email please include:</b></p>
+
+<ol>
+<li>Name</li>
+<li>Age</li>
+<li>Best email to reach you</li>
+<li>Timezone</li>
+<li>How active are you on 117chan?</li>
+<li>Board you're applying to be a Janitor for</li>
+<li>Your qualifications</li>
+<li>Issues that are currently present on the board you are applying to?</li>
+</ol>
 </div>
 
 <div id="buttonType"></div>
