Several bug fixes, and universalized the nav format across all pages.

--- a/static/faq.html
+++ b/static/faq.html
@@ -41,19 +41,25 @@
   rel="stylesheet" />
 </head>
 <body>
-  <nav>
+<nav>
     <span id="navLinkSpan"> <span>[</span> <a
+        href="/"
+        class="coloredIcon"
+        id="navLinkHome">Home</a> <span>/</span> <a
         href="/boards.js"
         class="coloredIcon"
         id="navBoardList">Boards</a> <span>/</span> <a
-        href="/overboard"
+        href="/.static/globalRules.html"
         class="coloredIcon"
-        id="navOverboard">Overboard</a> <span>/</span> <a
-        href="/.static/faq.html"
+        id="navOverboard">Rules</a> <span>]</span> <span>[</span> <a
+        href="/overboard/"
         class="coloredIcon"
-        id="navPosting">FAQ</a> <span>]</span>
-    </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
-  </nav>
+        id="navOverboard">All</a> <span>/</span> <a
+        href="/overboardsfw/"
+        class="coloredIcon"
+        id="navPosting">All SFW</a> <span>]</span>
+    </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span></span>
+</nav>
 
   <header>
     <img
