--- a/static/moderation.html
+++ b/static/moderation.html
@@ -13,22 +13,25 @@
 </head>
 <body>
 
-  <nav>
+<nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
-        id="navLinkHome"
-        class="coloredIcon">home</a> <span>/</span> <a
+        class="coloredIcon"
+        id="navLinkHome">Home</a> <span>/</span> <a
         href="/boards.js"
-        id="navBoardList"
-        class="coloredIcon">boards</a> <span>/</span> <a
-        href="/overboard"
-        id="navOverboard"
-        class="coloredIcon">overboard</a> <span>/</span> <a
-        href="/.static/posting.html"
-        id="navPosting"
-        class="coloredIcon">help</a> <span>]</span>
-    </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> </span>
-  </nav>
+        class="coloredIcon"
+        id="navBoardList">Boards</a> <span>/</span> <a
+        href="/.static/globalRules.html"
+        class="coloredIcon"
+        id="navOverboard">Rules</a> <span>]</span> <span>[</span> <a
+        href="/overboard/"
+        class="coloredIcon"
+        id="navOverboard">All</a> <span>/</span> <a
+        href="/overboardsfw/"
+        class="coloredIcon"
+        id="navPosting">All SFW</a> <span>]</span>
+    </span> <span id="navBoardsSpan"> </span> <span id="navOptionsSpan"> <span></span>
+</nav>
 
   <header>
     <img
