Added donation page, with 3 different methods of donation. Fixed nav bar, and several other small bugs.

--- a/static/donate.html
+++ b/static/donate.html
@@ -22,7 +22,8 @@
   type="text/css"
   rel="stylesheet" />
 
-<title>Contact</title>
+
+<title>Global Rules</title>
 <meta charset="UTF-8" />
 <meta
   name="viewport"
@@ -33,6 +34,7 @@
   rel="stylesheet" />
 </head>
 <body>
+
 <nav>
     <span id="navLinkSpan"> <span>[</span> <a
         href="/"
@@ -63,53 +65,25 @@
   </header>
 
 <center>
-<h1>Janitor Application</h1>
-<p class="nonBoardSubText"><b>JANITOR APPLICATIONS ARE CURRENTLY: <font color = "green">OPEN</font></b></p>
+
+
+<h1>Donate</h1>
+<p class="nonBoardSubText">Help us improve 117chan!</p>
 
 <div class = "gAnnounce">
 <p id="globalAnnouncement"></p>
 </div>
 
 <div class = "tableOutside">
-<h2 class = "table_h2">Apply</h2>
-<p><b>Janitors are currently needed on</b>: /a/, /b/, /g/, /pol/, /v/, /v9k/.</p>
-<p>Thanks for expressing interest in becoming a volunteer at 117chan!</p>
-<p>As a board janitor you will be in charge of maintaining order, and enforcing both global and board rules.</p>
+<h2 class = "table_h2">How to Donate</h2>
+<p>By donating you are contributing to the development of 117chan, as well as assisting us with hosting, domain, and labor costs. User donations along with non-intrusive advertisments (not provided by Google, and do not trace users) help us provide a quality service that is free for everyone.</p>
 
-<font color = "green"><b><p>Janitor's CAN...</p></b></font>
-<ol>
-<li>Removing threads, replies and images that pertain to their <i>assigned</i> board(s).</li>
-<li>Submit ban/warning <i>requests</i> to moderators.</li>
-<li>Access the report log.</li>
-</ol>
-
-<font color = "red"><b><p>Janitor's CANNOT...</p></b></font>
-<ol>
-<li>Ban users.</li>
-<li>Use role identifiers, or set rules.</li>
-</ol>
-
-<b><p>Requirements</p></b>
-<ol>
-<li>Be a responsible individual.</li>
-<li>Be able to use IRC/Mumble, and be regularily contactable.</li>
-<li>Have a deep understand of established rules.</li>
-<li>Be accountable, all of your actions are logged.</li>
-<li>Remain annonymous, do not disclose your role.</li>
-</ol>
-
-<p><b>To apply, please send an email to admin@117chan.org   [admin (at) 117chan.org]. Please make the subject of the email "Janitor Application." In the body of the email please include:</b></p>
-
-<ol>
-<li>Name</li>
-<li>Age</li>
-<li>Best email to reach you</li>
-<li>Timezone</li>
-<li>How active are you on 117chan?</li>
-<li>Board you're applying to be a Janitor for</li>
-<li>Your qualifications</li>
-<li>Issues that are currently present on the board you are applying to?</li>
-</ol>
+<p><u>Methods to Donate:</u></p>
+  <ol>
+    <li>Bitcoin: <b>1EpR3YKFG7rUNFZ4Bu8qex5WJT2EPgTd23</b> <a href="/.static/qr/bitcoinqr.png">[QR Code]</a></li>
+    <li>Etherium: <b>0xcD80501b7eC8f2164042961103238A11e6C76f8c</b> <a href="/.static/qr/etheriumqr.png">[QR Code]</a></li>
+    <li>Litecoin: <b>LShZY93NYxQGPMPqi7kruwgLJYG8yCxE4J</b> <a href="/.static/qr/litecoinqr.png">[QR Code]</a></li>
+  </ol>
 </div>
 
 <div id="buttonType"></div>
@@ -130,3 +104,4 @@
 <script src="/.static/js/footerInject.js"></script>
 
 </html>
+
