--- a/static/globalRules.html
+++ b/static/globalRules.html
@@ -44,7 +44,10 @@
         id="navBoardList">Boards</a> <span>/</span> <a
         href="/.static/globalRules.html"
         class="coloredIcon"
-        id="navOverboard">Rules</a> <span>]</span> <span>[</span> <a
+        id="navOverboard">Rules</a> <span>/</span> <a
+        href="/.static/donate.html"
+        class="coloredIcon"
+        id="navBoardList">Donate</a> <span>]</span> <span>[</span> <a
         href="/overboard/"
         class="coloredIcon"
         id="navOverboard">All</a> <span>/</span> <a
