Fixed a long awaited bug, the exit button not appearing on the quick reply. Added several other small fixes.

--- a/static/donate.html
+++ b/static/donate.html
@@ -23,7 +23,7 @@
   rel="stylesheet" />
 
 
-<title>Global Rules</title>
+<title>Donate</title>
 <meta charset="UTF-8" />
 <meta
   name="viewport"
@@ -78,7 +78,7 @@
 <h2 class = "table_h2">How to Donate</h2>
 <p>By donating you are contributing to the development of 117chan, as well as assisting us with hosting, domain, and labor costs. User donations along with non-intrusive advertisments (not provided by Google, and do not trace users) help us provide a quality service that is free for everyone.</p>
 
-<p><u>Methods to Donate:</u></p>
+<p><u>Methods of Donating:</u></p>
   <ol>
     <li>Bitcoin: <b>1EpR3YKFG7rUNFZ4Bu8qex5WJT2EPgTd23</b> <a href="/.static/qr/bitcoinqr.png">[QR Code]</a></li>
     <li>Etherium: <b>0xcD80501b7eC8f2164042961103238A11e6C76f8c</b> <a href="/.static/qr/etheriumqr.png">[QR Code]</a></li>
