More bug fixes, and tweaking of FAQ page.

--- a/static/faq.html
+++ b/static/faq.html
@@ -90,9 +90,9 @@
     <li><a href = "#faq6">What is a tripcode?</a></li>
     <li><a href = "#faq7">What is a role signature?</a></li>
     <li><a href = "#appeal">Can I appeal a ban?</a></li>
-    <li><a href = "#faq8">How can I become a volunteer?</a></li>
-    <li><a href = "#faq9">How do I leave feedback or request features?</a></li>
-    <li><a href = "#faq10">How do I get in contact with an administrator?</a></li>
+    <li><a href = "#faq9">How can I become a volunteer?</a></li>
+    <li><a href = "#faq10">How do I leave feedback or request features?</a></li>
+    <li><a href = "#faq11">How do I get in contact with an administrator?</a></li>
   </ol>
 
 <a id="faq1"></a><h2 class = "table_h2">What is 117Chan?</h2>
@@ -111,7 +111,7 @@
 
 <a id="faq3"></a><h2 class = "table_h2">How does 117chan work?</h2>
 <p>117chan is running off of the <a href="https://gitgud.io/LynxChan/LynxChan">LynxChan backend</a>, and the <a href="https://gitgud.io/117chan/117Lynx">117chan fron-end</a>, a fork of <a href="https://gitgud.io/LynxChan/PenumbraLynx">PenumbraLynx</a>. All of the software used to create this website is libre, and respects your privacy/freedom. Analytics are gathered using a tool called <a href="https://github.com/matomo-org/matomo">Matomo</a> (formarly known as Piwik).</p>
-<p>Full IP addresses are not logged, only the first two segments are, in order to prevent spamming. We do not use Google's captcha system, nor do we use any Google integrations. For more information on how 117chan operates visit the <a href="/.static/about.html">about page</a>.
+<p>Full IP addresses are not logged, only the first two segments are, in order to prevent spamming. We do not use Google's captcha system, nor do we use any Google integrations.</p>
 
 <a id="faq4"></a><h2 class = "table_h2">What are global rules?</h2>
 <p>Global rules are rules that apply to every board. That being said, many boards have their own independent ruleset usually viewable on the boards first sticky thread.</p>
@@ -219,10 +219,10 @@ You can also enable an always use role signature rule in your account settings.<
 
 
 <a id="faq9"></a><h2 class = "table_h2">How can I become a volunteer?</h2>
-<p>Typically if volunteers are needed a global announcement will be sent out. The necessity for volunteers may vary from being a board janitor, a 117chan developer, IRC/Mumble moderator etc.</p>
+<p>Typically if volunteers are needed a global announcement will be sent out. To see if 117chan is currently taking janitor applications, click <a href = "/.static/janitor.html">here</a>.</p>
 
 <a id="faq10"></a><h2 class = "table_h2">How do I leave feedback or request features?</h2>
-<p>To report a bug, leave feedback or request features you can reply to the <a href="/meta/">General Improvement Thread</a> on /meta/ or start a new thread on /meta/.</p>
+<p>To report a bug, leave feedback or request features you can reply to the <a href="/meta/">General Improvement and Feedback</a> thread on /meta/ or start a new thread on /meta/.</p>
 
 <a id="faq11"></a><h2 class = "table_h2">How do I get in contact with an administrator?</h2>
 <p>Please send an email to admin@117chan.org   [admin (at) 117chan.org].</p>
