Added Piwik tracking code.

--- a/static/faq.html
+++ b/static/faq.html
@@ -39,6 +39,21 @@
   href="/.static/css/global.css"
   type="text/css"
   rel="stylesheet" />
+<!-- Matomo -->
+<script type="text/javascript">
+  var _paq = _paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//159.89.231.67/";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', '1']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
 </head>
 <body>
 <nav>
@@ -215,7 +230,7 @@ You can also enable an always use role signature rule in your account settings.<
 
 
 <a id="appeal"></a><h2 class = "table_h2">Can I appeal a ban?</h2>
-<p>Yes, get in contact with a moderator on either IRC, Mumble, or email ban@117chan.org   [ban (at) 117chan.org].</p>
+<p>Yes, get in contact with a moderator on either <a href="https://client00.chat.mibbit.com/?server=irc.rizon.net&channel=%23117chan">IRC</a> (#117chan@rizon.net), Mumble, or email ban@117chan.org   [ban (at) 117chan.org].</p>
 
 
 <a id="faq9"></a><h2 class = "table_h2">How can I become a volunteer?</h2>
