Fixed posting page.

--- a/static/contact.html
+++ b/static/contact.html
@@ -93,7 +93,7 @@
 
 <div class = "tableOutside">
 <a id="legal"></a><h2 class = "table_h2">DMCA Takedowns</h2>
-<p>If you are a copyright holder of an image/video/file and would like it removed send a <b>PROPERLY-FORMATED</b> DMCA Takedown Notice to legal@117chan.org   [legal (at) 117chan.org].</p>
+<p>If you are a copyright holder of an image/video/file and would like it removed send a <b>PROPERLY-FORMATED</b> DMCA Takedown Notice to admin@117chan.org   [legal (at) 117chan.org].</p>
 <p>For legal reasons, DMCA Takedown Notices <b>MUST</b> include the following:</p>
 <ol style="1">
 <li>Name or Company Name</li>
