--- a/static/faq.html
+++ b/static/faq.html
@@ -230,14 +230,14 @@ You can also enable an always use role signature rule in your account settings.<
 
 
 <a id="appeal"></a><h2 class = "table_h2">Can I appeal a ban?</h2>
-<p>Yes, get in contact with a moderator on either <a href="https://client00.chat.mibbit.com/?server=irc.rizon.net&channel=%23117chan">IRC</a> (#117chan@rizon.net), Mumble, or email ban@117chan.org   [ban (at) 117chan.org].</p>
+<p>Yes, get in contact with a moderator on either <a href="https://client00.chat.mibbit.com/?server=irc.rizon.net&channel=%23117chan">IRC</a> (#117chan@rizon.net), Mumble, or email admin@117chan.org   [ban (at) 117chan.org].</p>
 
 
 <a id="faq9"></a><h2 class = "table_h2">How can I become a volunteer?</h2>
 <p>Typically if volunteers are needed a global announcement will be sent out. To see if 117chan is currently taking janitor applications, click <a href = "/.static/janitor.html">here</a>.</p>
 
 <a id="faq10"></a><h2 class = "table_h2">How do I leave feedback or request features?</h2>
-<p>To report a bug, leave feedback or request features you can reply to the <a href="/meta/">General Improvement and Feedback</a> thread on /meta/ or start a new thread on /meta/.</p>
+<p>To report a bug, leave feedback or request features you can reply to the <a href="/meta/res/1.html">General Improvement and Feedback</a> thread on /meta/ or start a new thread on /meta/.</p>
 
 <a id="faq11"></a><h2 class = "table_h2">How do I get in contact with an administrator?</h2>
 <p>Please send an email to admin@117chan.org   [admin (at) 117chan.org].</p>
