Few adjustments to rules.

--- a/static/globalRules.html
+++ b/static/globalRules.html
@@ -95,7 +95,7 @@
         <li>Do not post anything that violates US law.</li>
         <li>Do not post, link to, request, or discuss pornographic content involving underage children. <b>(This will result in a permanent ban, which cannot be appealed).</b></li>
         <li>Do not flood or spam.</li>
-        <li>Do not post furry, pony/brony, or loli/shota images/content.</li>
+        <li>Do not post furry, pony/brony images/content.</li>
         <li>Do not evade bans <b>(this may result in a permanent ban)</b>, instead <a href="/.static/faq.html#appeal">appeal</a> your ban.</li>
         <li>Advertising is not welcome--this includes referral linking, "offers", soliciting, begging, etc.</li>
         <li>Do not post adult content on safe for work (sfw) boards.</li>
