Small adjustments to rules and such.

--- a/static/janitor.html
+++ b/static/janitor.html
@@ -79,7 +79,7 @@
 
 <center>
 <h1>Janitor Application</h1>
-<p class="nonBoardSubText"><b>JANITOR APPLICATIONS ARE CURRENTLY: <font color = "green">OPEN</font></b></p>
+<p class="nonBoardSubText"><b>JANITOR APPLICATIONS ARE CURRENTLY: <font color = "red">CLOSED</font></b></p>
 
 <div class = "gAnnounce">
 <p id="globalAnnouncement"></p>
@@ -87,7 +87,6 @@
 
 <div class = "tableOutside">
 <h2 class = "table_h2">Apply</h2>
-<p><b>Janitors are currently needed on</b>: /a/, /b/, /g/, /pol/, /v/, /v9k/.</p>
 <p>Thanks for expressing interest in becoming a volunteer at 117chan!</p>
 <p>As a board janitor you will be in charge of maintaining order, and enforcing both global and board rules.</p>
 
